# ring-cffi

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  lib.ring  main.ring  package.ring
.github/workflows/: alpine_build.yml  freebsd_build.yml  macos_build.yml  main.yml  testCI.yml  ubuntu_build.yml  windows_build.yml
cmake/: BuildLibFFI.cmake  fficonfig.h.in
examples/: 01_c_load.ring  02_c_call.ring  03_c_alloc.ring  04_c_pointers.ring  05_c_strings.ring  06_c_sym.ring  07_c_funcptr.ring  08_c_structs.ring  09_c_unions.ring  10_c_enums.ring  11_c_callbacks.ring  12_c_variadic.ring  13_c_cdef.ring  14_c_sizeof.ring  15_c_errors.ring  16_c_typeof.ring  17_oop_load.ring  18_oop_functions.ring  19_oop_memory.ring  20_oop_pointers.ring  21_oop_structs_unions.ring  22_oop_misc.ring  23_oop_qsort.ring
lib/macos/amd64/: libring_cffi.dylib
lib/macos/arm64/: libring_cffi.dylib
src/: cffi.ring
src/c_src/: ring_cffi.c  ring_cffi.h
src/utils/: color.ring  install.ring  uninstall.ring
test/: CFFI_test.ring
